[package]
name = "Eremit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
mlua = { version = "0.9.1", features = ["luajit52"]}
rustyline = "13.0.0"
midir = "0.9.1"
rusty_link = "0.4.1"
confy = "0.5.1"
serde = "1.0.193"
serde_derive = "1.0.193"
rosc = "0.10.1"
